Forms and Table Update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <a href="./table.html">Go to my table page</a>
   <!-- Forms -->
   <form action="./dashboard">
     <input type="text" placeholder="Enter your full name" required>
